--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Baton Rouge Slack
 subtitle:
-description: The Baton Rouge Slack is community for Baton Rouge area developers, designers, marketers, business people, hobbyists, students, entrepreneurs, and other professionals involved in technology.
+description: The Baton Rouge Slack is a community for Baton Rouge area developers, designers, marketers, business people, hobbyists, students, entrepreneurs, and other professionals involved in technology.
 author: John Doe
 language:
 timezone:
