--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
-    publish = "public/"
-    command = "npm run generate && npm run serviceworker"
+    publish = "public"
+    command = "zola build"
+
+[build.environment]
+    ZOLA_VERSION = "0.13.0"
+
+[context.deploy-preview]
+    command = "zola build --base-url $DEPLOY_PRIME_URL"
