--- a/package.json
+++ b/package.json
@@ -9,19 +9,17 @@
   "dependencies": {
     "@hcaptcha/react-hcaptcha": "^1.6.0",
     "@mdx-js/loader": "^2.3.0",
-    "@next/mdx": "^13.2.4",
-    "@vercel/fetch": "^6.2.0",
-    "glob": "^9.3.2",
-    "next": "^13.2.4",
+    "@next/mdx": "^14.0.3",
+    "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.60.0"
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/mdx": "^2.0.4",
-    "@types/node": "18.15.11",
-    "@types/react": "^18.0.31",
-    "@types/react-dom": "^18.0.11",
-    "typescript": "^5.0.3"
+    "@types/node": "^20.9.4",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
+    "typescript": "^5.3.2"
   }
 }
